<resources>
    <string name="app_name">YourTour</string>
    <string name="title_text">Google Sign-In</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signing_out">Signing out…</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Database status messages -->
    <string name="GPS_error">Could not retrieve GPS data. Please try again</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="refresh_token">Get Fresh Token</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel_rec">Cancel Recording</string>
    <string name="new_tour">Create New Tour</string>
    <string name="start_rec">Start Recording</string>
    <string name="stop_rec">Stop Recording</string>
    <string name="maps">Show Tour on Map</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="search">Search</string>
    <string name="extsearch">Extended Search</string>
    <string name="loadmore">Load more comments</string>
    <string name="photo">Photo</string>
    <string name="station">Station</string>
    <string name="add_photo">Add photo</string>
    <string name="remove_photo">Remove photo</string>
    <string name="start_tour">Start Tour</string>
    <string name="cancel_tour">Cancel Tour</string>
    <string name="end_tour">Finish Tour</string>
    <string name="end_station">Finish Station</string>
    <string name="show_station">Show Station</string>
    <string name="show_mission">Show Mission</string>

    <!-- TextView labels -->
    <string name="tour_name">Tour Name</string>
    <string name="station_name">Station Name</string>
    <string name="tour_description">Description</string>
    <string name="author_name">Author Name</string>
    <string name="available_tours">Available tours</string>
    <string name="radius">Radius:</string>
    <string name="km">km</string>
    <string name="order">Order by:</string>
    <string name="createdon">Created on: </string>
    <string name="updated">Last update on: </string>
    <string name="commentopt">Comment (optional)</string>
    <string name="rate">Rate Tour</string>
    <string name="no_comments">No comments yet</string>
    <string name="recording">Recording Tour</string>
    <string name="addToWP">Add to current waypoint:</string>
    <string name="addMission">Add Mission</string>
    <string name="question">Question</string>
    <string name="answer">Correct Answer</string>
    <string name="unlock">Unlocks next part of the tour</string>
    <string name="num_attempts">Number of attempts:</string>
    <string name="leave_empty">(Leave blank for infinite attempts)</string>
    <string name="stations">Stations</string>
    <string name="noStations">No Stations</string>
    <string name="tours_with_tags">Show only tours with following tags:</string>


    <!-- Spinner contents -->
    <string name="rating">Rating</string>
    <string name="distance">Distance</string>
    <string name="date">Date</string>
    <string name="last_update">Last update</string>
    <string name="asc">ascending</string>
    <string name="desc">descending</string>

    <!-- Tag List -->
    <string name="foot">By Foot</string>
    <string name="bike">By Bike</string>
    <string name="dogs">With Dogs</string>
    <string name="wheelchair">Accessible with baby carriages or wheelchairs</string>
    <string name="flat">Flat Trail</string>
    <string name="food">Food and Drink</string>
    <string name="multi">Mystery-Tour</string>
    <string name="games">Contains Mini Games</string>
    <string name="restricted">Restricted access</string>

    <string-array name="tag_list">
        <item>@string/foot</item>
        <item>@string/bike</item>
        <item>@string/dogs</item>
        <item>@string/wheelchair</item>
        <item>@string/flat</item>
        <item>@string/food</item>
        <item>@string/multi</item>
        <item>@string/games</item>
        <item>@string/restricted</item>

    </string-array>

    <!-- Dialog messages -->
    <string name="cancel_rec_message">Do you really want to cancel recording? \nAll waypoints will be lost!</string>
    <string name="cancel_tour_message">Do you want to cancel this tour? Progress won\'t be saved.</string>
    <string name="cancel_rec_title">Cancel?</string>


    <!-- Alert messages -->
    <string name="no_comment">Comment can\'t be empty</string>
    <string name="no_name">Name can\'t be empty</string>
    <string name="no_description">Description can\'t be empty</string>
    <string name="no_mission">Mission info missing</string>
    <string name="attempts_warning">Setting limited amount of attempts for missions that unlock another part of the tour is not recommended, because  users that run out of attempts aren\'t able to complete the tour! </string>
    <string name="photo_error">Photo couldn\'t be saved</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="no_back_button">To go back, please end or cancel recording</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity" translatable="false">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

</resources>
