<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:weightSum="5"
    android:background="@color/bg_gray_main">


    <TextView
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/editComment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border_light"
        android:layout_weight="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2">

        <Button
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>